# ConsumerCorner

./: .env.example  .gitignore  .package-lock.json  40  README.md  cfdsdfs.py  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  mailserver.env  mongo-init.js  openapi.json  package-lock.json  run
backend/: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main_test.py  pyproject.toml  req.txt  requirements.txt  test_innValidate.py  test_mainFastAPI.py  test_validate.py  wait-for-postgres.sh
backend/alembic/: env.py
backend/alembic/versions/: 2024_12_15_0200-2fe310433d8f_create_tables.py  2024_12_15_0206-77bb976d1937_create_tables.py  315f6e084e4f_create.py
backend/app/: .env.template  CriticalError.py  README.md  config.py  crud.py  database.py  docker-compose.yml  main.py  main_test.py  models.py  test_validate.py
backend/app/actions/: __init__.py  create_user.py
backend/app/alembic/: env.py
backend/app/api/: __init__.py  auth.py  fastapi_users_router.py  users.py
backend/app/auth/: crud.py  dependencies.py  models_auth.py  routes.py  schemas.py  utils.py
backend/app/core/: config.py
backend/app/crud/: user.py
backend/app/database/: __init__.py
backend/app/enterprises/: crud.py  routes.py  schemas.py  utils.py
backend/app/errors/: EnvError.py
backend/app/inn_service/: config.py  models.py  routes.py  schemas.py  services.py  utils.py
backend/app/legacy_auth/: routes.py  utils.py
backend/app/legacy_users/: dependencies.py  routes.py  schemas.py
backend/app/logger/: config.py
backend/app/models/: Code.py  Comment.py  CommentBase.py  IDs.py  INN.py  OGRN.py  Point.py  PointBase.py  PointUpdate.py  Proprietor.py  ProprietorBase.py  ProprietorUpdate.py  __init__.py  inn_models.py  models.py  mongo_models.py  verify_models.py
backend/app/mongodb/: models.py  mongodb.py  routes.py  schemas.py
backend/app/points/: crud.py  routes.py  schemas.py  utils.py
backend/app/reviews/: crud.py  routes.py  schemas.py
backend/app/schemas/: comments_schemas.py  (+9 more)
backend/tests/: conftest.py  test_auth_post.py  test_auth_refresh_post.py  test_auth_verify_post.py  test_get_me.py  test_register.py  test_users_post.py  utils.py
(+468 files in other folders)
