[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
pynamodb = "^6.0.0"
bcrypt = "^4.1.3"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"
flake8-pyproject = "^1.2.3"
pytest = "^8.2.0"
pytest-watch = "^4.2.0"
httpx = "^0.27.0"
