[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true

[tool.poetry]
name = "backend"
authors = ["Popov Nikita <popovnikita01@gmail.com"]
version = "0.0.1"
description = ""

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.114.2"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
pydantic = {extras = ["email"], version = "^2.9.1"}
pydantic-settings = "^2.5.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
asyncpg = "^0.29.0"
alembic = "^1.13.2"
orjson = "^3.10.7"
fastapi-users = {extras = ["sqlalchemy"], version = "^13.0.0"}

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.4.2"
flake8-pyproject = "^1.2.3"
pytest = "^8.2.0"
pytest-watch = "^4.2.0"
httpx = "^0.27.0"
